Fix trailing space on link
- with the newline here the link gains a space character in the end of it, which looks weird

--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -45,8 +45,7 @@
 
         <p class="govuk-body govuk-!-margin-bottom-6">
           <a class="govuk-link" href="<%= transition_checker_email_signup_path(c: criteria_keys) %>">
-            <%= t('brexit_checker.account_signup.email_alerts.link') %>
-          </a>
+            <%= t('brexit_checker.account_signup.email_alerts.link') %></a>
           <%= t('brexit_checker.account_signup.email_alerts.text') %>
         </p>
 
