--- a/app/views/brexit_checker/_results_citizen_actions.html.erb
+++ b/app/views/brexit_checker/_results_citizen_actions.html.erb
@@ -1,8 +1,11 @@
 <section class="brexit-checker-actions">
-  <header>
-    <h2 class="govuk-heading-l action-audience__heading">
-      <%= t('brexit_checker.results.audiences.citizen.heading') %>
-    </h2>
+  <header class="action-audience__heading">
+     <%= render "govuk_publishing_components/components/heading", {
+          text: t('brexit_checker.results.audiences.citizen.heading'),
+          heading_level: 2,
+          font_size: "l",
+          margin_bottom: 0
+      } %>
   </header>
   <section class="brexit-checker-audience">
     <% citizen_results_groups.each.with_index do |grouping, group_index| %>
