--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -16,11 +16,15 @@
   <% if content_item.government? %>
     <%= render 'govuk_publishing_components/components/government_navigation', active: content_item.government_content_section %>
   <% end %>
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
-        <h1 class="app-c-search-page-heading">Search<span class="govuk-visually-hidden"> all content</span></h1>
+      <%= render "govuk_publishing_components/components/heading", {
+        text: sanitize("Search <span class='govuk-visually-hidden'>all content</span>"),
+        heading_level: 1,
+        font_size: "xl",
+        margin_bottom: 4
+        } %>
         <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide">
           <%= render "govuk_publishing_components/components/search", {
             aria_controls: "js-search-results-info",
