Update content and tidy up attributes

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -79,7 +79,8 @@
         },
         link_text: action_based_email_link_label,
         link_href: path_based_on_account_feature_flag,
-        link_title: t("brexit_checker.results.email_sign_up_title"),
+        title: t("brexit_checker.results.email_sign_up_title"),
+        description: t("brexit_checker.results.email_sign_up_description"),
       } %>
     <% end %>
 
