Add callout variation
And use it in the instance rendered at the top of the results page.

--- a/app/assets/stylesheets/components/_email-link.scss
+++ b/app/assets/stylesheets/components/_email-link.scss
@@ -1,5 +1,8 @@
 .app-c-email-link {
   display: block;
-  padding: govuk-spacing(4);
+}
+
+.app-c-email-link--callout {
   background: govuk-colour('light-grey');
+  padding: govuk-spacing(6);
 }
