--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -81,6 +81,7 @@
         link_href: path_based_on_account_feature_flag,
         title: t("brexit_checker.results.email_sign_up_title"),
         description: t("brexit_checker.results.email_sign_up_description"),
+        callout: true,
       } %>
     <% end %>
 
