Add hidden on mobile variation
And use it in the instance rendered at the top of the results page.

--- a/app/assets/stylesheets/components/_email-link.scss
+++ b/app/assets/stylesheets/components/_email-link.scss
@@ -6,3 +6,11 @@
   background: govuk-colour('light-grey');
   padding: govuk-spacing(6);
 }
+
+.app-c-email-link--hidden-on-mobile {
+  display: none;
+
+  @include govuk-media-query($from: tablet) {
+    display: block;
+  }
+}
