--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -82,6 +82,7 @@
         title: t("brexit_checker.results.email_sign_up_title"),
         description: t("brexit_checker.results.email_sign_up_description"),
         callout: true,
+        hidden_on_mobile: true,
       } %>
     <% end %>
 
