--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -57,9 +57,10 @@
           </button>
         </div>
         <div class="facets__footer">
-          <button class="gem-c-button govuk-button js-close-filters js-show-results" type="button">
-            Show <span class="js-result-count"> <%= result_set_presenter.displayed_total %></span>
-          </button>
+          <%= render "govuk_publishing_components/components/button", {
+            text: sanitize("Show <span class=\"js-result-count\">#{result_set_presenter.displayed_total}</span>"),
+            classes: "js-close-filters js-show-results"
+          } %>
         </div>
       </div>
     </div>
