Some adjustments for the brexit checker templates
The brexit checker templates use the finder_layout layout file.
This layout file already contains a <main> wrapper. However some of the
brexit checker views also contain a main wrapper, which means that on
those pages there would be two main elements, which goes against the
rule that the <main> element must be unique to the document.

In addition to this, these views also contain breadcrumbs. Since
breadcrumbs are a navigation element, they should live outside of
<main>. I updated these views to store the breadcrumbs using content_for.
This way the breadcrumbs will be placed outside of <main> in the layout
file.

--- a/app/views/brexit_checker/email_signup.html.erb
+++ b/app/views/brexit_checker/email_signup.html.erb
@@ -6,26 +6,29 @@
   <%= account_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
+<% content_for :breadcrumbs do %>
+  <div class="govuk-width-container">
+    <%= render 'govuk_publishing_components/components/breadcrumbs', {
+      collapse_on_mobile: true,
+      breadcrumbs: [
+        {
+          title: t('brexit_checker.breadcrumbs.home'),
+          url: "/"
+        },
+        {
+          title: t('brexit_checker.breadcrumbs.brexit-home'),
+          url: "/transition"
+        },
+        {
+          title: t('brexit_checker.breadcrumbs.results'),
+          url: transition_checker_results_path(c: criteria_keys)
+        }
+      ]
+    } %>
+  </div>
+<% end %>
 <div class="govuk-width-container">
-  <%= render 'govuk_publishing_components/components/breadcrumbs', {
-    collapse_on_mobile: true,
-    breadcrumbs: [
-      {
-        title: t('brexit_checker.breadcrumbs.home'),
-        url: "/"
-      },
-      {
-        title: t('brexit_checker.breadcrumbs.brexit-home'),
-        url: "/transition"
-      },
-      {
-        title: t('brexit_checker.breadcrumbs.results'),
-        url: transition_checker_results_path(c: criteria_keys)
-      }
-    ]
-  } %>
-
-  <main class="govuk-main-wrapper" role="mail">
+  <div class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <%= render "govuk_publishing_components/components/heading", {
@@ -51,5 +54,5 @@
         <% end %>
       </div>
     </div>
-  </main>
+  </div>
 </div>
