--- a/app/views/brexit_checker/save_results_email_signup.html.erb
+++ b/app/views/brexit_checker/save_results_email_signup.html.erb
@@ -6,26 +6,30 @@
   <%= account_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
-<div class="govuk-width-container">
-  <%= render 'govuk_publishing_components/components/breadcrumbs', {
-    collapse_on_mobile: true,
-    breadcrumbs: [
-      {
-        title: t('brexit_checker.breadcrumbs.home'),
-        url: "/"
-      },
-      {
-        title: t('brexit_checker.breadcrumbs.brexit-home'),
-        url: "/transition"
-      },
-      {
-        title: t('brexit_checker.breadcrumbs.results'),
-        url: transition_checker_results_path(c: criteria_keys)
-      }
-    ]
-  } %>
+<% content_for :breadcrumbs do %>
+  <div class="govuk-width-container">
+    <%= render 'govuk_publishing_components/components/breadcrumbs', {
+      collapse_on_mobile: true,
+      breadcrumbs: [
+        {
+          title: t('brexit_checker.breadcrumbs.home'),
+          url: "/"
+        },
+        {
+          title: t('brexit_checker.breadcrumbs.brexit-home'),
+          url: "/transition"
+        },
+        {
+          title: t('brexit_checker.breadcrumbs.results'),
+          url: transition_checker_results_path(c: criteria_keys)
+        }
+      ]
+    } %>
+  </div>
+<% end %>
 
-  <main class="govuk-main-wrapper">
+<div class="govuk-width-container">
+  <div class="govuk-main-wrapper">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <%= render "govuk_publishing_components/components/heading", {
@@ -65,5 +69,5 @@
         <% end %>
       </div>
     </div>
-  </main>
+  </div>
 </div>
