Update content and formatting for change type
Previously this was normal text and verbose. The new design calls
for shorter content in the form of a heading, now that the checker
has full control of the email body content (see previous commit).

--- a/app/views/brexit_checker_mailer/change_notification.text.erb
+++ b/app/views/brexit_checker_mailer/change_notification.text.erb
@@ -1,4 +1,4 @@
-<%= t("brexit_checker_mailer.change_notification.#{@notification.type}") %>
+# <%= t("brexit_checker_mailer.change_notification.#{@notification.type}") %>
 
 <% if @action.title_url.present? %>
 [<%= @action.title %>](<%= notification_email_link(@action.title_url, @notification) %>)
