Fix Sass linting issues

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -1,6 +1,8 @@
 // flatten all browser defaults and styles inherited from gov.uk header
+// Borrowed from http://meyerweb.com/eric/tools/css/reset/
 
-/* Borrowed from http://meyerweb.com/eric/tools/css/reset/ */
+// stylelint-disable selector-list-comma-newline-after
+
 div, span,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -29,4 +31,3 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   line-height: inherit;
   font-weight: normal;
 }
-
