--- a/app/assets/stylesheets/components/_option-select.scss
+++ b/app/assets/stylesheets/components/_option-select.scss
@@ -15,9 +15,8 @@
     ::-webkit-scrollbar-thumb {
       border-radius: 4px;
 
-      // scss-lint:disable ColorVariable
       background-color: rgba(0, 0, 0, .5);
-      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.87);
+      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .87);
     }
   }
 
