Update error copy / design for email signup
Previously this showed as a callout at the bottom of the page, which
is contrary to our design patterns. Note that the JS import is there
to ensure the error summary is focussed when the page reloads.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@ $govuk-use-legacy-palette: false;
 @import 'govuk_publishing_components/components/details';
 @import 'govuk_publishing_components/components/document-list';
 @import 'govuk_publishing_components/components/error-message';
+@import 'govuk_publishing_components/components/error-summary';
 @import 'govuk_publishing_components/components/feedback';
 @import 'govuk_publishing_components/components/govspeak';
 @import 'govuk_publishing_components/components/heading';
