--- a/app/views/email_alert_subscriptions/new.html.erb
+++ b/app/views/email_alert_subscriptions/new.html.erb
@@ -15,16 +15,26 @@
         title: @signup_presenter.name,
       } %>
 
+      <% if @error_message.present? %>
+        <%= render "govuk_publishing_components/components/error_summary", {
+          title: "There is a problem",
+          items: [
+            {
+              text: @error_message,
+              href: "#signup-choices-options",
+            }
+          ]
+        } %>
+      <% end %>
+
       <%= render "govuk_publishing_components/components/checkboxes", {
+        id: "signup-choices-options",
         name: nil,
         no_hint_text: true,
         heading: t("email_alert_subscriptions.new.question"),
         items: @signup_presenter.choices_formatted,
+        error: @error_message,
       } %>
-
-      <% if @error_message.present? %>
-        <p class="signup-choices__message"><%= @error_message %></p>
-      <% end %>
 
     <% else %>
 
