Move account logic out of the brexit controller & into concerns
The controller methods are left behind, but most of the control flow
and error handling is gone, making the controller itself easier to
read.

--- a/app/views/brexit_checker/save_results_confirm.html.erb
+++ b/app/views/brexit_checker/save_results_confirm.html.erb
@@ -51,7 +51,7 @@
               text: t("brexit_checker.confirm_changes.table.new_answer")
             }
           ],
-          rows: results_comparison(@old_criteria_keys, criteria_keys)
+          rows: results_comparison(@saved_results, criteria_keys)
         } %>
 
         <%= render "govuk_publishing_components/components/inset_text", {
