Prototype Subject Verb Object autocomplete
This PROTOTYPE explores how we could use
subject verb object extraction to make
suggestions for what someone might want
to do in relation to an entity
For example, someone entering passport
will get suggestions about applying,
renewing or stopping a passport
(amongst others)

This is an early prototype to explore
the concept and to provide a talking point
it does NOT represent what the author
thinks is a production ready system

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -26,14 +26,21 @@
         margin_bottom: 4
         } %>
         <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide">
-          <%= render "govuk_publishing_components/components/search", {
-            aria_controls: "js-search-results-info",
-            id: "finder-keyword-search",
-            name: "keywords",
-            type: 'search',
-            value: result_set_presenter.user_supplied_keywords,
-          } %>
+          <div class="search-input">
+            <%= render "govuk_publishing_components/components/search", {
+                aria_controls: "js-search-results-info",
+                id: "finder-keyword-search",
+                name: "keywords",
+                type: 'search',
+                value: result_set_presenter.user_supplied_keywords,
+            } %>
+            <div class="autocom-box">
+              <!-- here list are inserted from javascript -->
+            </div>
+          </div>
+
         </div>
+
         <div id="js-spelling-suggestions" class="spelling-suggestions"
           data-analytics-ecommerce
           data-ecommerce-start-index="1"
