Track back links in Brexit checker
We use the standard TrackClick JavaScript module to send data to GA when users click on the back link. We're doing this to improve our understanding of user journeys.

--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -18,10 +18,22 @@
     <% if @previous_page %>
       <%= render "govuk_publishing_components/components/back_link", {
         href: transition_checker_questions_path(page: @previous_page, c: criteria_keys),
+        data_attributes: {
+          module: "track-click",
+          track_category: "brexit-checker-qa",
+          track_action: @current_question.key,
+          track_label: "back_click",
+        },
       } %>
     <% else %>
       <%= render "govuk_publishing_components/components/back_link", {
         href: "/transition",
+        module: "track-click",
+        data_attributes: {
+          track_category: "brexit-checker-qa",
+          track_action: @current_question.key,
+          track_label: "back_click",
+        },
       } %>
     <% end %>
   </div>
