--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -25,7 +25,7 @@
         font_size: "xl",
         margin_bottom: 4
         } %>
-        <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide">
+        <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide" data-module="autocomplete">
           <%= render "govuk_publishing_components/components/search", {
             aria_controls: "js-search-results-info",
             id: "finder-keyword-search",
@@ -34,6 +34,9 @@
             value: result_set_presenter.user_supplied_keywords,
           } %>
         </div>
+        <% content_for :head do %>
+          <meta name="govuk:search-autocomplete-status" content="">
+        <% end %>
         <div id="js-spelling-suggestions" class="spelling-suggestions"
           data-analytics-ecommerce
           data-ecommerce-start-index="1"
