Use gemTrackClick script

--- a/app/views/brexit_checker/_action_list.html.erb
+++ b/app/views/brexit_checker/_action_list.html.erb
@@ -18,7 +18,7 @@
           <a
             class="govuk-link"
             href="<%= action.title_url %>"
-            data-module="track-click"
+            data-module="gem-track-click"
             data-track-action="<%= "#{analytics_group}#{index + 1}"%> - Action"
             data-track-category="brexit-checker-results"
             data-track-label="<%= action.title_url %>"
@@ -55,7 +55,7 @@
             <a
               href="<%= action.guidance_url %>"
               class="govuk-link govuk-body"
-              data-module="track-click"
+              data-module="gem-track-click"
               data-track-action="<%= "#{analytics_group}#{index + 1}"%> - Guidance"
               data-track-category="brexit-checker-results"
               data-track-label="<%= action.guidance_url %>"
