--- a/app/views/brexit_checker/_change_answers_link.html.erb
+++ b/app/views/brexit_checker/_change_answers_link.html.erb
@@ -1,6 +1,6 @@
 <a
   class="govuk-link"
-  data-module="track-click"
+  data-module="gem-track-click"
   data-track-action="ChangeAnswers"
   data-track-category="ChangeAnswersClicked"
   data-track-label="<%= transition_checker_questions_path %>"
