--- a/app/views/brexit_checker/_stay_updated.html.erb
+++ b/app/views/brexit_checker/_stay_updated.html.erb
@@ -13,7 +13,7 @@
   text: t("brexit_checker.stay_updated.sign_up"),
   href: path_based_on_account_feature_flag,
   data_attributes: {
-    "module": "track-click",
+    "module": "gem-track-click",
     "track-action": t("brexit_checker.stay_updated.sign_up"),
     "track-category": "StayUpdated",
     "track-label": transition_checker_email_signup_path
