--- a/app/views/brexit_checker/email_signup.html.erb
+++ b/app/views/brexit_checker/email_signup.html.erb
@@ -46,7 +46,7 @@
             text: t('brexit_checker.email_signup.sign_up_button'),
             inline_layout: true,
             data_attributes: {
-              module: "track-click",
+              module: "gem-track-click",
               "track-category": "transition-email-alert",
               "track-action": "subscribe",
             }
