--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -72,7 +72,7 @@
     <% else %>
       <%= render 'components/email_link', {
         data_attributes: {
-          "module": "track-click",
+          "module": "gem-track-click",
           "track-action": action_based_email_link_label,
           "track-category": "StayUpdated",
           "track-label": transition_checker_email_signup_path
