--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -24,7 +24,7 @@
     <%= render "govuk_publishing_components/components/back_link", {
       href: back_link_path,
       data_attributes: {
-        module: "track-click",
+        module: "gem-track-click",
         track_category: "brexit-checker-qa",
         track_action: @current_question.key,
         track_label: "back_click",
