--- a/app/views/finders/_facet_tags.html.erb
+++ b/app/views/finders/_facet_tags.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% if local_assigns[:applied_filters] %>
-  <div class="facet-tags" data-module="track-click">
+  <div class="facet-tags" data-module="gem-track-click">
     <% local_assigns[:applied_filters].each do |applied_filter| %>
       <div class="facet-tags__group">
         <% applied_filter.each do |filter| %>
