Suppress checkbox component default hint text
The checkbox component has a [default hint text](https://components.publishing.service.gov.uk/component-guide/checkboxes/with_multiple_checkboxes)
that [needs to be turned off](https://components.publishing.service.gov.uk/component-guide/checkboxes/without_hint_text).

We only have [hint text](https://github.com/alphagov/finder-frontend/blob/f020f1c8340c0d4043834751a3a1f4f2e2798b1c/app/lib/brexit_checker/questions.yaml#L37)
set on [two questions](https://www.gov.uk/transition-check/questions?c%5B%5D=owns-operates-business-organisation-uk&c%5B%5D=owns-operates-business-organisation&c%5B%5D=working-uk&c%5B%5D=nationality-uk&page=18)
at present. This change makes sure that it's not set when we don't want it
to be.

--- a/app/views/brexit_checker/_question_multiple_choice.html.erb
+++ b/app/views/brexit_checker/_question_multiple_choice.html.erb
@@ -4,6 +4,7 @@
   heading: current_question.text,
   description: formatted_description,
   hint_text: current_question.hint_text,
+  no_hint_text: current_question.hint_text.nil?,
   is_page_heading: true,
   items: format_question_options(current_question.options(criteria_keys), criteria_keys)
 } %>
