--- a/app/views/brexit_checker/_stay_updated.html.erb
+++ b/app/views/brexit_checker/_stay_updated.html.erb
@@ -11,7 +11,7 @@
 
 <%= render "govuk_publishing_components/components/button", {
   text: t("brexit_checker.stay_updated.sign_up"),
-  href: path_based_on_account_feature_flag,
+  href: transition_checker_save_results_path(c: criteria_keys),
   data_attributes: {
     "module": "gem-track-click",
     "track-action": t("brexit_checker.stay_updated.sign_up"),
