--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -56,7 +56,7 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <% if accounts_available? && logged_in? %>
+    <% if logged_in? %>
       <% if @results_differ %>
         <%= render 'govuk_publishing_components/components/notice', {
           title: t('brexit_checker.results.accounts.results_differ.message'),
@@ -77,7 +77,7 @@
           "track-label": transition_checker_email_signup_path
         },
         link_text: action_based_email_link_label,
-        link_href: path_based_on_account_feature_flag,
+        link_href: transition_checker_save_results_path(c: criteria_keys),
         link_title: t("brexit_checker.results.email_sign_up_title"),
       } %>
     <% end %>
@@ -86,7 +86,7 @@
     <%= render 'results_citizen_actions', citizen_results_groups: @presenter.citizen_results_groups if @presenter.citizen_results_groups.any? %>
     <%= render 'results_with_no_actions', criteria: @presenter.criteria if (@presenter.business_results.empty? && @presenter.citizen_results_groups.empty?) %>
 
-    <% if accounts_available? && logged_in? %>
+    <% if logged_in? %>
       <% if @results_differ %>
         <%= render 'govuk_publishing_components/components/notice', {
           title: t('brexit_checker.results.accounts.results_differ.message'),
