Remove is_page_heading param from radio components
Replace the is_page_heading parameter with heading_level and
heading_size.

--- a/app/views/brexit_checker/_question_single_wrapped.html.erb
+++ b/app/views/brexit_checker/_question_single_wrapped.html.erb
@@ -5,7 +5,8 @@
     heading_caption: current_question.caption,
     description: formatted_description,
     hint: current_question.hint_text,
-    is_page_heading: true,
+    heading_level: 1,
+    heading_size: 'xl',
     items: current_question.options.map do |option|
       checkboxes = if option.sub_options.present?
                      render "govuk_publishing_components/components/checkboxes", {
