--- a/app/views/brexit_checker/_question_single_choice.html.erb
+++ b/app/views/brexit_checker/_question_single_choice.html.erb
@@ -4,6 +4,7 @@
   heading: current_question.text,
   description: formatted_description,
   hint: current_question.hint_text,
-  is_page_heading: true,
+  heading_level: 1,
+  heading_size: 'xl',
   items: format_question_options(current_question.options(criteria_keys), criteria_keys)
 } %>
