Update option select button/link styles

--- a/app/assets/stylesheets/components/_option-select.scss
+++ b/app/assets/stylesheets/components/_option-select.scss
@@ -41,6 +41,8 @@
 
   &:hover {
     text-decoration: underline;
+    text-underline-offset: .1em;
+    @include govuk-link-hover-decoration;
   }
 
   &::-moz-focus-inner {
