--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -29,7 +29,7 @@
         },
         {
           title: t('brexit_checker.breadcrumbs.brexit-home'),
-          url: "/transition"
+          url: "/brexit"
         }
       ]
     } %>
