--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -12,7 +12,7 @@
   end
 
 
-  back_link_path = "/transition"
+  back_link_path = "/brexit"
   if  @previous_page
     back_link_path = transition_checker_questions_path(page: @previous_page, c: criteria_keys)
   end
