--- a/app/views/brexit_checker/save_results_confirm.html.erb
+++ b/app/views/brexit_checker/save_results_confirm.html.erb
@@ -16,7 +16,7 @@
         },
         {
           title: t('brexit_checker.breadcrumbs.brexit-home'),
-          url: "/transition"
+          url: "/brexit"
         },
         {
           title: t('brexit_checker.breadcrumbs.results'),
