Remove Explore Super Menu AB Test code
The test has concluded and all users now get the new header.

--- a/app/views/search/no_search_term.html.erb
+++ b/app/views/search/no_search_term.html.erb
@@ -1,9 +1,7 @@
 <% content_for :body_classes, "search" %>
 <% content_for :title, "Search" %>
 <% content_for :extra_headers do %>
-  <meta name="description"
-        content="Search GOV.UK." />
-  <%= explore_menu_variant.analytics_meta_tag.html_safe %>
+  <meta name="description" content="Search GOV.UK." />
 <% end %>
 
 <main id="content" class="search-wrapper search-wrapper--no-search-term">
