Show a confirmation page when first saving results

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 $govuk-compatibility-govuktemplate: true;
 $govuk-use-legacy-palette: false;
 $govuk-new-link-styles: true;
+$govuk-use-legacy-font: false;
 
 @import 'reset';
 
