--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -1,3 +1,4 @@
+<% @omit_feedback_footer ||= nil %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,9 +23,11 @@
           <%= yield %>
         </div>
       </main>
-      <div class="govuk-width-container">
-        <%= render 'govuk_publishing_components/components/feedback' %>
-      </div>
+      <% unless @omit_feedback_footer %>
+        <div class="govuk-width-container">
+          <%= render 'govuk_publishing_components/components/feedback' %>
+        </div>
+      <% end %>
     </div>
   </body>
 </html>
