Remove email signups links on checker results page
As we're retiring the checker in 3 weeks and not intending to make any
more updates which would result in emails being sent, we should remove
the links to sign up.

There's a fair amount of stuff remaining for accounts users. I'm intending
to leave that in place until we actually retire the checker, as it makes
things simpler here, and reduces the risk of us breaking things ahead of
time.

This does mean that we have to fake a couple of navigation steps in accounts
tests so that the remaining steps can run.

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -58,19 +58,7 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <% if must_reauthenticate? %>
-      <%= render 'components/email_link', {
-        data_attributes: {
-          "module": "gem-track-click",
-          "track-action": action_based_email_link_label,
-          "track-category": "StayUpdated",
-          "track-label": transition_checker_email_signup_path
-        },
-        link_text: action_based_email_link_label,
-        link_href: transition_checker_save_results_path(c: criteria_keys),
-        link_title: t("brexit_checker.results.email_sign_up_title"),
-      } %>
-    <% else %>
+    <% if !must_reauthenticate? %>
       <% if @results_differ %>
         <%= render 'govuk_publishing_components/components/notice', {
           title: t('brexit_checker.results.accounts.results_differ.message'),
@@ -95,8 +83,6 @@
           description: sanitize(t('brexit_checker.results.accounts.results_differ.description', link: transition_checker_save_results_confirm_path(c: criteria_keys)))
         } %>
       <% end %>
-    <% else %>
-      <%= render 'stay_updated' %>
     <% end %>
 
     <%= render 'share_links' %>
