Fix up quotes based on stylelint rules

--- a/app/assets/stylesheets/components/_email-link.scss
+++ b/app/assets/stylesheets/components/_email-link.scss
@@ -1,7 +1,7 @@
 .app-c-email-link {
   display: block;
   padding: govuk-spacing(4);
-  background: govuk-colour('light-grey');
+  background: govuk-colour("light-grey");
 
   .app-c-email-link__title {
     font-weight: bold;
