--- a/app/assets/stylesheets/components/_option-select.scss
+++ b/app/assets/stylesheets/components/_option-select.scss
@@ -100,7 +100,7 @@
 
 .app-c-option-select__filter {
   position: relative;
-  background: govuk-colour('white');
+  background: govuk-colour("white");
   padding: 13px 13px govuk-spacing(2) 13px;
 }
 
