--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -1,8 +1,8 @@
-@import 'govuk_publishing_components/govuk_frontend_support';
-@import 'govuk_publishing_components/components/print/button';
-@import 'govuk_publishing_components/components/print/govspeak';
-@import 'govuk_publishing_components/components/print/step-by-step-nav-header';
-@import 'govuk_publishing_components/components/print/title';
+@import "govuk_publishing_components/govuk_frontend_support";
+@import "govuk_publishing_components/components/print/button";
+@import "govuk_publishing_components/components/print/govspeak";
+@import "govuk_publishing_components/components/print/step-by-step-nav-header";
+@import "govuk_publishing_components/components/print/title";
 
 .filter-form,
 .feed {
