Use a hidden input for hidden facets
This replaces the use of an input[type=text] for a hidden field. The
motivation for replacing this is that these depend on inline styles and
these will no longer be permitted by the Content Security Policy in
https://github.com/alphagov/govuk_app_config/pull/279

This also serves as a semantic improvement to the HTML.

--- a/app/views/finders/_hidden_clearable_facet.html.erb
+++ b/app/views/finders/_hidden_clearable_facet.html.erb
@@ -1,12 +1,12 @@
-<div id="<%= hidden_clearable_facet.key %>" style="display: none">
-<%
-  key = hidden_clearable_facet.key
-  values = params[key]
-  key = "#{key}[]" if values.is_a?(Array)
--%>
-<% [values].flatten.each_with_index do |value, index| -%>
+<div id="<%= hidden_clearable_facet.key %>">
+  <%
+    key = hidden_clearable_facet.key
+    values = params[key]
+    key = "#{key}[]" if values.is_a?(Array)
+  -%>
+  <% [values].flatten.each_with_index do |value, index| -%>
 
 
-  <%= text_field_tag key, value, id: "#{hidden_clearable_facet.key}_#{index}" %>
-<% end -%>
+    <%= hidden_field_tag key, value, id: "#{hidden_clearable_facet.key}_#{index}" %>
+  <% end -%>
 </div>
