Update caching strategy for pption select fact view
When the facet presentation order changes, but the actual content remains otherwise
unchanged, this does not invalidate the cache for this view fragment.

Updating this to include the OptionSelectFacet's version in the cache key ensures
that the view if always updated when the underlying facet's model changes in anyway.
not always

--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -1,4 +1,4 @@
-<% cache_if option_select_facet.cacheable?, option_select_facet.cache_key do %>
+<% cache_if option_select_facet.cacheable?, option_select_facet.cache_key_with_version do %>
   <%= render partial: 'components/option-select', locals: {
     :key => option_select_facet.key,
     :title => option_select_facet.name,
