Add support for `open_on_load` facet option
By default the option select facet will be closed if it has no selected items and it is not the first option select facet on the page.

If the `open_on_load` facet option is provided and set to true, it will override the default logic and ensure the option select facet is open.

--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -5,7 +5,7 @@
     :aria_controls_id => "js-search-results-info",
     :options_container_id => option_select_facet.key,
     :options => option_select_facet.options("js-search-results-info", option_select_facet.key),
-    :closed_on_load => option_select_facet_counter > 0 && option_select_facet.unselected?,
+    :closed_on_load => option_select_facet.is_closed_on_load?(option_select_facet_counter),
     :show_filter => option_select_facet.show_option_select_filter,
     :large => option_select_facet.large?
   }
