Update attribute names

--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -7,7 +7,7 @@
     :options => option_select_facet.options("js-search-results-info", option_select_facet.key),
     :closed_on_load => option_select_facet_counter > 0 && option_select_facet.unselected?,
     :show_filter => option_select_facet.show_option_select_filter,
-    :large => option_select_facet.is_large?
+    :large => option_select_facet.large?
   }
   %>
 <% end %>
